--- a/bloch_sphere_tut.ipynb
+++ b/bloch_sphere_tut.ipynb
@@ -187,10 +187,10 @@
     "Each single-qubit gate corresponds to a **rotation** of the Bloch vector.\n",
     "\n",
     "| Gate | Axis | Rotation angle | Effect |\n",
-    "|------|------|----------------|--------|\n",
-    "| X | x-axis | $\pi$ | Flips $\ket{0}$ ↔ $\ket{1}$ |\n",
-    "| Y | y-axis | $\pi$ | Rotates about y |\n",
-    "| Z | z-axis | $\pi$ | Adds phase −1 to $\ket{1}$ |\n",
+    "|:------|:------|:----------------|:--------|\n",
+    "| X | x-axis | $\\pi$ | Flips $\\ket{0}$ ↔ $\\ket{1}$ |\n",
+    "| Y | y-axis | $\\pi$ | Rotates about y |\n",
+    "| Z | z-axis | $\\pi$ | Adds phase −1 to $\\ket{1}$ |\n",
     "| Rx(θ) | x-axis | θ | Arbitrary rotation |\n",
     "| Ry(θ) | y-axis | θ | Arbitrary rotation |\n",
     "| Rz(θ) | z-axis | θ | Arbitrary rotation |"
