--- a/bloch_sphere_tut.ipynb
+++ b/bloch_sphere_tut.ipynb
@@ -311,9 +311,9 @@
    "source": [
     "### 8. Exercises\n",
     "\n",
-    "1. Create and plot the states \\(|+i⟩\\) and \\(|−i⟩\\).  \n",
-    "2. Verify that \\(R_z(\\pi/2)\\) corresponds to a rotation about the z-axis.  \n",
-    "3. Show that the **T-gate** is a rotation of π/4 around the z-axis.  \n",
+    "1. Create and plot the states $\\ket{+i}$ and $\\ket{-i}$.  \n",
+    "2. Verify that $R_z(\\pi/2)$ corresponds to a rotation about the z-axis.  \n",
+    "3. Show that the **T-gate** is a rotation of $\\pi/4$ around the z-axis.  \n",
     "4. Combine gates to reproduce Fig. 3.1 (“Pauli rotations of the Bloch sphere”) from *Quantum Gates.pdf*."
    ]
   },
