Correction and additions

--- a/5_Quarter_turns.ipynb
+++ b/5_Quarter_turns.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "19b3c7b1",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "95864d4e",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "<Figure size 480x480 with 1 Axes>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2ebe5db6",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "<Figure size 480x480 with 1 Axes>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "433382a6",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "<Figure size 480x480 with 1 Axes>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f07c81b9",
    "metadata": {},
    "outputs": [
@@ -249,51 +249,91 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Results for |0⟩ ---\n",
-      "Rx(π/2) on |0⟩: [0.707107+0.j       0.      -0.707107j]\n",
-      "Ry(π/2) on |0⟩: [0.707107+0.j 0.707107+0.j]\n",
-      "Rz(π/2) on |0⟩: [0.707107-0.707107j 0.      +0.j      ]\n",
+      "=== Results for |0⟩ ===\n",
+      "S (z-rotation 0.50π): [0.707107-0.707107j 0.      +0.j      ]\n",
+      "S† (z-rotation -0.50π): [0.707107+0.707107j 0.      +0.j      ]\n",
+      "V (x-rotation 0.50π): [0.707107+0.j       0.      -0.707107j]\n",
+      "V† (x-rotation -0.50π): [0.707107+0.j       0.      +0.707107j]\n",
+      "Hₚₛ (y-rotation 0.50π): [0.707107+0.j 0.707107+0.j]\n",
+      "Hₚₛ† (y-rotation -0.50π): [ 0.707107+0.j -0.707107+0.j]\n",
       "\n",
-      "--- Results for |1⟩ ---\n",
-      "Rx(π/2) on |1⟩: [0.      -0.707107j 0.707107+0.j      ]\n",
-      "Ry(π/2) on |1⟩: [-0.707107+0.j  0.707107+0.j]\n",
-      "Rz(π/2) on |1⟩: [0.      +0.j       0.707107+0.707107j]\n"
+      "=== Results for |1⟩ ===\n",
+      "S (z-rotation 0.50π): [0.      +0.j       0.707107+0.707107j]\n",
+      "S† (z-rotation -0.50π): [0.      +0.j       0.707107-0.707107j]\n",
+      "V (x-rotation 0.50π): [0.      -0.707107j 0.707107+0.j      ]\n",
+      "V† (x-rotation -0.50π): [0.      +0.707107j 0.707107+0.j      ]\n",
+      "Hₚₛ (y-rotation 0.50π): [-0.707107+0.j  0.707107+0.j]\n",
+      "Hₚₛ† (y-rotation -0.50π): [0.707107+0.j 0.707107+0.j]\n",
+      "\n",
+      "--- Numeric checks (overlaps) ---\n",
+      "S vs Rz(pi/2): overlap magnitude = 1.0 phase = -0.7853981633974483\n",
+      "V vs Rx(pi/2): overlap magnitude = 1.0 phase = 0.0\n",
+      "H_ps vs Ry(pi/2): overlap magnitude = 1.0 phase = 0.0\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 1 Solution — Applying RX, RY, RZ(π/2) to |0> and |1> and plotting on Bloch sphere\n",
+    "# Exercise 1 — quarter-turn named gates and their inverses\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import Statevector, Operator\n",
     "from qiskit.visualization import plot_bloch_multivector\n",
     "import numpy as np\n",
     "\n",
-    "# Define rotation axes and angle\n",
-    "axes = ['x', 'y', 'z']\n",
     "pi = np.pi\n",
     "\n",
-    "# Define the computational basis states |0> and |1>\n",
+    "# Basis states\n",
     "bases = {\n",
     "    '|0⟩': Statevector.from_label('0'),\n",
     "    '|1⟩': Statevector.from_label('1')\n",
     "}\n",
     "\n",
-    "# Loop over basis states and apply each rotation\n",
+    "# Use single-letter axis labels to avoid 'rrz' error\n",
+    "quarter_turns = {\n",
+    "    'S'   : ('z',  pi/2),\n",
+    "    'S†'  : ('z', -pi/2),\n",
+    "    'V'   : ('x',  pi/2),\n",
+    "    'V†'  : ('x', -pi/2),\n",
+    "    'Hₚₛ' : ('y',  pi/2),   # pseudo-Hadamard\n",
+    "    'Hₚₛ†': ('y', -pi/2)\n",
+    "}\n",
+    "\n",
     "for b_label, sv in bases.items():\n",
-    "    print(f\"\\n--- Results for {b_label} ---\")\n",
-    "    for axis in axes:\n",
-    "        # create a new circuit\n",
+    "    print(f\"\\n=== Results for {b_label} ===\")\n",
+    "    for g_label, (axis, theta) in quarter_turns.items():\n",
     "        qc = QuantumCircuit(1)\n",
-    "        getattr(qc, f\"r{axis}\")(pi/2, 0)  # apply RX, RY, or RZ(π/2)\n",
-    "        \n",
-    "        # evolve the state\n",
+    "        getattr(qc, f\"r{axis}\")(theta, 0)\n",
     "        out = sv.evolve(qc)\n",
-    "        \n",
-    "        # print numeric results\n",
-    "        print(f\"R{axis}(π/2) on {b_label}: {np.round(out.data, 6)}\")\n",
-    "        \n",
-    "        # plot the state on the Bloch sphere\n",
-    "        plot_bloch_multivector(out)"
+    "        print(f\"{g_label} ({axis}-rotation {theta/pi:.2f}π): {np.round(out.data, 6)}\")\n",
+    "        plot_bloch_multivector(out)\n",
+    "\n",
+    "# Numeric equivalence checks (up to global phase)\n",
+    "print(\"\\n--- Numeric checks (overlaps) ---\")\n",
+    "test_sv = Statevector.from_label('+')\n",
+    "\n",
+    "\n",
+    "# S vs Rz(pi/2)\n",
+    "qc_s = QuantumCircuit(1); qc_s.s(0)\n",
+    "qc_rz = QuantumCircuit(1); qc_rz.rz(pi/2, 0)\n",
+    "sv_s = test_sv.evolve(qc_s)\n",
+    "sv_rz = test_sv.evolve(qc_rz)\n",
+    "ov = np.vdot(sv_s.data, sv_rz.data)\n",
+    "print(\"S vs Rz(pi/2): overlap magnitude =\", np.abs(ov), \"phase =\", np.angle(ov))\n",
+    "\n",
+    "# V vs Rx(pi/2)\n",
+    "qc_v = QuantumCircuit(1); qc_v.rx(pi/2, 0)\n",
+    "qc_rx = QuantumCircuit(1); qc_rx.rx(pi/2, 0)\n",
+    "sv_v = test_sv.evolve(qc_v)\n",
+    "sv_rx = test_sv.evolve(qc_rx)\n",
+    "ov2 = np.vdot(sv_v.data, sv_rx.data)\n",
+    "print(\"V vs Rx(pi/2): overlap magnitude =\", np.abs(ov2), \"phase =\", np.angle(ov2))\n",
+    "\n",
+    "# H_ps vs Ry(pi/2)\n",
+    "qc_hps = QuantumCircuit(1); qc_hps.ry(pi/2, 0)\n",
+    "qc_ry = QuantumCircuit(1); qc_ry.ry(pi/2, 0)\n",
+    "sv_hps = test_sv.evolve(qc_hps)\n",
+    "sv_ry = test_sv.evolve(qc_ry)\n",
+    "ov3 = np.vdot(sv_hps.data, sv_ry.data)\n",
+    "print(\"H_ps vs Ry(pi/2): overlap magnitude =\", np.abs(ov3), \"phase =\", np.angle(ov3))\n"
    ]
   },
   {
@@ -410,6 +450,24 @@
     "op_B = Operator(qc_B)\n",
     "commutator = op_A.data @ op_B.data - op_B.data @ op_A.data\n",
     "print(\"\\nOperator commutator norm (should be non-zero if non-commuting):\", np.linalg.norm(commutator))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4305a280",
+   "metadata": {},
+   "source": [
+    "| Gate                         | Definition                       | Equivalent Rotation | Matrix Representation                                                             | Notes                                                            |\n",
+    "| ---------------------------- | -------------------------------- | ------------------ | --------------------------------------------------------------------------------- | ---------------------------------------------------------------- |\n",
+    "| **S gate**                   | Phase gate adding a $\\pi/2$ phase to | $\\ket{1}$ | $R_z(\\pi/2)$ | $$S = \\begin{pmatrix}1 & 0 \\\\ 0 & i\\end{pmatrix}$$ | A quarter turn about the Z-axis. |\n",
+    "| **S† gate**                  | Inverse of S                     | $R_z(-\\pi/2)$    | $$S^\\dagger = \\begin{pmatrix}1 & 0 \\\\ 0 & -i\\end{pmatrix}$$ | Rotates $-\\pi/2$ around Z. |\n",
+    "| **V gate**                   | Quarter turn about the X-axis    | $R_x(\\pi/2)$     | $$V = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i \\\\ -i & 1\\end{pmatrix}$$ | Sometimes called the “square root of X” gate, since $V^2 = X$. |\n",
+    "| **V† gate**                  | Inverse of V                     | $R_x(-\\pi/2)$    | $$V^\\dagger = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & i \\\\ i & 1\\end{pmatrix}$$ | $(V^\\dagger)^2 = X$. |\n",
+    "| **Pseudo-Hadamard ($H_{ps}$)** | Quarter turn about Y-axis        | $R_y(\\pi/2)$     | $$H_{ps} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -1 \\\\ 1 & 1\\end{pmatrix}$$ | Sometimes called $\\sqrt{Y}$, since $(H_{ps})^2 = Y$. |\n",
+    "| **Pseudo-Hadamard†**         | Inverse of $H_{ps}$              | $R_y(-\\pi/2)$    | $$H_{ps}^\\dagger = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & 1 \\\\ -1 & 1\\end{pmatrix}$$ | Rotates opposite direction around Y. |\n",
+    "\n",
+    "\\* **Note on Equivalent Rotation:**  \n",
+    "The “Equivalent Rotation” column shows the Bloch-sphere rotation corresponding to the gate **up to a global phase**. For computational basis states $|0\\rangle$ and $|1\\rangle$, this rotation only introduces a global phase and does not change the physical state (i.e., the Bloch vector stays along the Z-axis). For superposition states, it changes **relative phases**, which is physically observable."
    ]
   }
  ],
