--- a/5_Quarter_turns.ipynb
+++ b/5_Quarter_turns.ipynb
@@ -454,13 +454,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4305a280",
+   "id": "657eb18b",
    "metadata": {},
    "source": [
     "| Gate                           | Definition                           | Equivalent Rotation      | Matrix Representation                                                                  | Notes                                                            |\n",
     "| ------------------------------ | ------------------------------------ | ------------------------ | -------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |\n",
-    "| **S gate**                     | Phase gate adding a $\\pi/2$ phase to | $\\ket{1}$ | $R_z(\\pi/2)$ | $S = \\begin{pmatrix}1 & 0 \\\\ 0 & i\\end{pmatrix}$                                       | A quarter turn about the Z-axis.                                 |\n",
-    "| **S† gate**                    | Inverse of S                         | $R_z(-\\pi/2)$            | $S^\\dagger = \\begin{pmatrix}1 & 0 \\\\ 0 & -i\\end{pmatrix}$ | Rotates $-\\pi/2$ around Z. |                                                                  |\n",
+    "| **S gate**                     | Phase gate adding a $\\pi/2$ phase to $\\ket{1}$| $R_z(\\pi/2)$ | $S = \\begin{pmatrix}1 & 0 \\\\ 0 & i\\end{pmatrix}$                                       | A quarter turn about the Z-axis.                                 |\n",
+    "| **S† gate**                    | Inverse of S                         | $R_z(-\\pi/2)$            | $S^\\dagger = \\begin{pmatrix}1 & 0 \\\\ 0 & -i\\end{pmatrix}$ | Rotates $-\\pi/2$ around Z. | -                                                                |\n",
     "| **V gate**                     | Quarter turn about the X-axis        | $R_x(\\pi/2)$             | $V = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i \\\\ -i & 1\\end{pmatrix}$                   | Sometimes called the “square root of X” gate, since $V^2 = X$.   |\n",
     "| **V† gate**                    | Inverse of V                         | $R_x(-\\pi/2)$            | $V^\\dagger = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & i \\\\ i & 1\\end{pmatrix}$             | $(V^\\dagger)^2 = X$.                                             |\n",
     "| **Pseudo-Hadamard ($H_{ps}$)** | Quarter turn about Y-axis            | $R_y(\\pi/2)$             | $H_{ps} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -1 \\\\ 1 & 1\\end{pmatrix}$               | Sometimes called $\\sqrt{Y}$, since $(H_{ps})^2 = Y$.             |\n",
