--- a/5_Quarter_turns.ipynb
+++ b/5_Quarter_turns.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "| Gate                           | Definition                           | Equivalent Rotation      | Matrix Representation                                                                  | Notes                                                            |\n",
     "| ------------------------------ | ------------------------------------ | ------------------------ | -------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |\n",
-    "| **S gate**                     | Phase gate adding a $\\pi/2$ phase to $\\ket{1}$| $R_z(\\pi/2)$ | $S = \\begin{pmatrix}1 & 0 \\\\ 0 & i\\end{pmatrix}$                                       | A quarter turn about the Z-axis.                                 |\n",
+    "| **S gate**                     | Adding a $\\pi/2$ phase to $\\ket{1}$  | $R_z(\\pi/2)$             | $S = \\begin{pmatrix}1 & 0 \\\\ 0 & i\\end{pmatrix}$                                       | A quarter turn about the Z-axis.                                 |\n",
     "| **S† gate**                    | Inverse of S                         | $R_z(-\\pi/2)$            | $S^\\dagger = \\begin{pmatrix}1 & 0 \\\\ 0 & -i\\end{pmatrix}$ | Rotates $-\\pi/2$ around Z. | -                                                                |\n",
     "| **V gate**                     | Quarter turn about the X-axis        | $R_x(\\pi/2)$             | $V = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i \\\\ -i & 1\\end{pmatrix}$                   | Sometimes called the “square root of X” gate, since $V^2 = X$.   |\n",
     "| **V† gate**                    | Inverse of V                         | $R_x(-\\pi/2)$            | $V^\\dagger = \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & i \\\\ i & 1\\end{pmatrix}$             | $(V^\\dagger)^2 = X$.                                             |\n",
@@ -469,6 +469,12 @@
     "\\* **Note on Equivalent Rotation:**  \n",
     "The “Equivalent Rotation” column shows the Bloch-sphere rotation corresponding to the gate **up to a global phase**. For computational basis states $|0\\rangle$ and $|1\\rangle$, this rotation only introduces a global phase and does not change the physical state (i.e., the Bloch vector stays along the Z-axis). For superposition states, it changes **relative phases**, which is physically observable."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd4518c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
